--- a/2019-torres-digital-theme.css
+++ b/2019-torres-digital-theme.css
@@ -5,7 +5,7 @@
 
     Description: omos uma Agência Gaúcha que trabalha com Desenvolvimento Web voltado para todos os Nichos do Mercado tais como os de insumos, commodities, pequenos, médios e grandes Lojistas que desejam alcançar mais Clientes através do e-Commerce: Sites, Aplicativos, Lojas Virtuais, Marketplaces, WordPress e Woocommerce, integrados com os Principais Cartões e Soluções de Pagamentos do Brasil e do Mundo; tais como Cielo, CyberSource, PagSeguro, Stripe, Vindi, MasterCard, Visa, American Express, outros.
 
-        https://www.torresdigital.tk * Menos é mais.
+        www.torresdigital.tk * Menos é mais.
 
     Version: 2.0 *//* 15 de Junho de 2019 - 00h:04m:41s
 
@@ -34,11 +34,13 @@ This theme is licensed under the GPL. Use it to make something cool, have fun, a
 .cm-s-2019-torres-digital-theme span.cm-variable-3 { color: #96F; }
 .cm-s-2019-torres-digital-theme span.cm-property { color: #F8019E; }
 .cm-s-2019-torres-digital-theme span.cm-operator { color: #999; }
-.cm-s-2019-torres-digital-theme span.cm-comment { color: #616163; }
+.cm-s-2019-torres-digital-theme span.cm-comment { color: #d5d5d5; }
 .cm-s-2019-torres-digital-theme span.cm-string { color: #F8019E; }
 .cm-s-2019-torres-digital-theme span.cm-meta { color: #F1FD31; font-weight: bold; }
+.cm-s-2019-torres-digital-theme span.cm-qualifier { color: #FFF700; font-weight: 600}
 .cm-s-2019-torres-digital-theme span.cm-qualifier { color: #FFF700; }
-.cm-s-2019-torres-digital-theme span.cm-builtin { color: #F8A901; font-weight: 600; }
+.cm-s-2019-torres-digital-theme span.cm-qualifier { color: #FFF700; font-weight: 600; }
+.cm-s-2019-torres-digital-theme span.cm-builtin { color: #F8A901; }
 .cm-s-2019-torres-digital-theme span.cm-bracket { color: #cc7; }
 .cm-s-2019-torres-digital-theme span.cm-tag { color: #FFBD40; }
 .cm-s-2019-torres-digital-theme span.cm-attribute { color: #FFF700; }
